# mutinfo-diffusion

./: README.md  pyproject.toml
infosedd-real-data/: .gitignore  README.md  create_promoter_dataset.ipynb  dataloader.py  diffusion.py  main.py  requirements.txt
infosedd-real-data/configs/: config.yaml  config_genomics.yaml  config_motif_finder.yaml
infosedd-real-data/configs/data/: genomic_plant_tata.yaml  summeval.yaml
infosedd-real-data/configs/noise/: geometric.yaml
infosedd-real-data/models/: __init__.py
infosedd-real-data/scripts/dna/: train_fdimeGAN.sh  train_fdimeMINE.sh  train_fdimeNWJ.sh  train_fdimesmile.sh
infosedd-real-data/scripts/summeval/: train_fdimeGANsummeval.sh  train_fdimeMINEsummeval.sh  (+3 more)
infosedd-synthetic/: .gitignore  README.md  datamodule.py  fdime_utils.py  graph_lib.py  mi_estimator.py  minde_utils.py  model.py  quickstart.ipynb  requirements.txt  sde_lib.py  train.py
infosedd-synthetic/configs/: config.yaml
infosedd-synthetic/distribution_generator/: distributions.py  evolution_lib.py
infosedd-synthetic/scripts/: run_exp.sh
infosedd_real_data/: README.md  __init__.py  dataloader.py  diffusion.py  fdime_utils.py  main.py  noise_schedule.py
infosedd_real_data/configs/: config_genomics.yaml  config_motif_finder.yaml
infosedd_real_data/models/: __init__.py  dimamba.py  dit.py
infosedd_synthetic/: README.md  __init__.py  datamodule.py  infosedd_utils.py  mi_estimator.py  minde_utils.py  model_minde.py  noise_lib.py  sde_lib.py
infosedd_synthetic/distribution_generator/: distributions.py
infosedd_synthetic/scripts/: single_run.sh
(+20 files in other folders)
