[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "infosedd"
version = "0.1.0"
description = "Information Estimation with Discrete Diffusion experiments"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "pytorch-lightning==2.5.2",
    "lightning==2.5.1.post0",
    "torchmetrics==1.6.0",
    "transformers==4.47.0",
    "datasets==3.1.0",
    "tokenizers==0.21.0",
    "rich==13.9.4",
    "timm==1.0.15",
    "positional-encodings==6.0.3",
    "einops==0.8.0",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "biopython==1.85",
    "fsspec==2024.9.0",
    "wandb==0.19.6",
    "tqdm==4.67.1",
    "pyyaml==6.0.2",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "numpy==1.26.4",
    "matplotlib==3.8.4",
    "causal-conv1d @ https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.3.0.post1/causal_conv1d-1.3.0.post1+cu122torch2.2cxx11abiFALSE-cp312-cp312-linux_x86_64.whl",
    "mamba-ssm @ https://github.com/state-spaces/mamba/releases/download/v1.2.0.post1/mamba_ssm-1.2.0.post1+cu122torch2.2cxx11abiFALSE-cp312-cp312-linux_x86_64.whl",
    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.6.0.post1/flash_attn-2.6.0.post1+cu122torch2.2cxx11abiFALSE-cp312-cp312-linux_x86_64.whl",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["infosedd_real_data", "infosedd_synthetic"]